style many to many

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,7 +1,1 @@
-@import "~bootstrap/scss/bootstrap";
-
-.create_btn {
-    width: auto;
-    aspect-ratio: 1;
-    border-radius: 50%;
-}
+@import '~bootstrap/scss/bootstrap';
